--- a/Development/jsDeveloper.html
+++ b/Development/jsDeveloper.html
@@ -1,12 +1,26 @@
 <!-- html:5 باستخدام HTMLقم بتهيئة ملفك ال -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
 
-<!-- HTMLبصفحتك ال scripts.js قم بربط ملف -->
+     
+     <title>Document</title>
+</head>
+<body>
+
+     
+     <!-- HTMLبصفحتك ال scripts.js قم بربط ملف -->
+     <script src="./js/scripts.js"> </script>
+</body>
+</html>
+
 
 <!-- 👇🏻👇🏻التمرين الأول -->
 
 <!-- :قم ببناء الدوال الآتية  -->
 
 <!-- 1. logger():
+
 
 تأخذ مصفوفة
 تطبع كل قيمة من قيم المصفوفة في ال
